# DSSC

./: README.md
Assignments/: README.md
Assignments/Assignment1/: CMakeLists.txt  README.md  makefile  results.txt  run.sh
Assignments/Assignment1/src/: pi.c
Assignments/Assignment2/: CMakeLists.txt  README.md  makefile  results.txt  run.sh
Assignments/Assignment2/src/: loop_schedules.c
Assignments/Assignment3/: CMakeLists.txt  README.md  makefile  results_mpi.txt  results_omp.txt  run.sh
Assignments/Assignment3/src/: pi_mpi.c  pi_omp.c
Assignments/Assignment4/: CMakeLists.txt  README.md  makefile  run.sh
Assignments/Assignment4/src/: ring.c
Assignments/Assignment5/: CMakeLists.txt  README.md  makefile  matrix.txt  run.sh
Assignments/Assignment5/src/: matrix.c
Assignments/Assignment6/: README.md  makefile  run.sh  transpose.x
Assignments/Assignment6/src/: main.cu  main_old.cu
Lab/: cptimer.c  cptimer.c~
Lab/Day1/: a.out  main.c  vector_parallel.c  vector_parallel.c~  vector_parallel_work_sharing_loop.c  vector_parallel_work_sharing_loop.c~
Lab/Day2/: loop_schedule.c
Lab/Day3/: .bcast.c.swp  a.out  bcast.c  hello_mpi.c
Lab/Day5/: add_simple.cu  add_simple_blocks.cu  add_simple_threads.cu
Lab/Day5/deviceQuery/: Makefile
